# MCTrans

./: .gitignore  .travis.yml  AlphaHeating.cpp  AlphaHeating.hpp  AtomicPhysics.hpp  BatchRunner.cpp  BatchRunner.hpp  CMakeLists.txt  COPYRIGHT  Centrifugal.cpp  Centrifugal.hpp  CircuitModel.cpp  Config.hpp  FreeWheel.cpp  FusionYield.cpp  FusionYield.hpp  GenerateVoltageTrace.py  GenerateVoltageTrace2.py  KINSOLWrapper.cpp  LICENCE.md  MCTrans.cpp  MCTransConfig.cpp  Makefile  Makefile.config  Makefile.local  Makefile.local.circleci_osx  Makefile.local.example  Makefile.local.osx  Makefile.local.travisci  MirrorPlasma.cpp  MirrorPlasma.hpp  NetCDFIO.cpp  NetCDFIO.hpp  Neutrals.cpp  PlasmaPhysics.hpp  PlotCMTrace-dbg.py  PlotCMTrace.py  README.md  Report.cpp  SpatialVoltageThoughts  (+11 more)
.circleci/: config.yml
examples/: Breakeven.conf  Breakeven.report  FreeWheel.conf  FreeWheel.ref.nc  Mirror_100kV.conf  Mirror_100kV.report  Mirror_100kV_CX.conf  Mirror_100kV_CX.report  Mirror_1keV.conf  Mirror_1keV.report  Mirror_1keV_CX.conf  Mirror_1keV_CX.report  README.md  Reactor.conf  Reactor.ref.nc  TimeDependentTest.conf  check_examples  nc_compare
manual/: MCTrans.tex  Makefile  gyrokinetics-macros.tex  macros.tex  references.bib
neutrals/theory/: simplified_theory.tex
notes/: MCTrans.tex  macros.tex  references.bib
plotting/: plot_time_traces.py  plot_voltage_input.py
tests/: CollisionTests.cpp  CollisionlessTransportTests.cpp  ConfigTests.cpp  FunctionalTests.cpp  MCTransTests.cpp  Makefile  NeutralTest.cpp  NeutralTests.cpp  README.md
tools/: parseOutput.py
(+5 files in other folders)
